# mediarename

./: .gitignore  README.md  changelog.md  pyproject.toml  requirements.txt  setup.py  tox.ini
scripts/: relabel_photo_with_datetimeoriginal.sh  rename-files-by-modification-data.sh
src/mediarename/: __init__.py  __main__.py
src/mediarename/config/: __init__.py  config.py
src/mediarename/controllers/: __init__.py  cli.py  mediarename.py
src/mediarename/models/: __init__.py  media_files_model.py  rename_files.py
src/mediarename/views/: __init__.py  metadata_printer.py
src/rename_media_files/: __main__.py
src/rename_media_files/config/: config.py
src/rename_media_files/controllers/: cli.py  rename_media_files.py
src/rename_media_files/models/: media_files_model.py  rename_files.py  rename_media_files.py
src/rename_media_files/utils/: date_converter.py
src/rename_media_files/views/: metadata_printer.py
tests/: conftest.py  test_media_files_model.py  test_mediarename.py  test_metadata_printer.py  test_rename_files.py  test_rename_media_files.py
